	update: explain usage particulars for each tag on the editor tab
	update: increase HTML SELECT maximum width (#1611)
	update: add support for standalone UCS servers (by Brian Pothier)
	update: add autocomplete to port link dialog object name, asset tag and port name fields
	update: add 1000Base-BX40 and 1000Base-BX80 port types (#1645)
	update: upgrade CodeMirror from 3.22 to 3.24
0.20.11 2016-02-07
	bugfix: Tag Picker does not display the full tag list as a tree (#1403)
	bugfix: race conditions in 802.Q deploy (switch remained synced after recalc)
	bugfix: catch EntityNotFound exceptions in data integrity report (#1439)
	bugfix: location log entries broke the object log report (#1443)
	bugfix: fix a PHP warning on older PHP versions (reported by Bruno Santoni)
	bugfix: more intelligent sort function for object portnames
	bugfix: upgrading from < 0.20.0 to >= 0.20.8 failed (#1463, #1501)
	bugfix: containers weren't sorted in a consistent manner (#1507)
	bugfix: live interface status on D-Link devices fixed
	bugfix: LivePorts tab was displayed only if $any_op was allowed in permissions
	bugfix: chapter editor: ability to re-name dictionary items keeping wiki-links
	bugfix: IP load balancer config was not removed when wiping object's data
	bugfix: fix file upload error handling
	update: SNMP support for Cisco C2960-Plus series
	update: ability to delete a VLAN keeping it in the VLAN ranges on 802.1Q ports
	update: sort by parent locations on the Rackspace page (#1153)
	new feature: VLAN domain groups.
		A group is a domain that has all the VLANs of its members
	update: SNMP support for Cisco Nexus 3132Q, WS-CE500-24PC (#1523),
		HP J9625A (#1459), Juniper EX2200 (#1395)
	update: ability to clean rack mounts or drop entire row (even if it contains racks inside)
		from user interface
	update: IP network page renders a little faster
	update: more efficient pagination for large IPv4 networks
	update: new 100G port types support (empty CXP, CR4, CR10, LR10, ER10)