@@ -605,14 +605,19 @@ $page['attrs']['parent'] = 'config';
 $tab['attrs']['default'] = 'View';
 $tab['attrs']['editattrs'] = 'Edit attributes';
 $tab['attrs']['editmap'] = 'Edit map';
+$tab['attrs']['constraints'] = 'Constraints';
 $tabhandler['attrs']['default'] = 'renderAttributes';
 $tabhandler['attrs']['editattrs'] = 'renderEditAttributesForm';
 $tabhandler['attrs']['editmap'] = 'renderEditAttrMapForm';
+$tabhandler['attrs']['constraints'] = 'renderAttrConstraintsForm';
 $ophandler['attrs']['editattrs']['add'] = 'tableHandler';
 $ophandler['attrs']['editattrs']['del'] = 'tableHandler';
 $ophandler['attrs']['editattrs']['upd'] = 'tableHandler';
 $ophandler['attrs']['editmap']['add'] = 'supplementAttrMap';
 $ophandler['attrs']['editmap']['del'] = 'tableHandler';
+$ophandler['attrs']['constraints']['add'] = 'tableHandler';
+$ophandler['attrs']['constraints']['del'] = 'tableHandler';
+$ophandler['attrs']['constraints']['upd'] = 'tableHandler';
 $interface_requires['attrs-*'] = 'interface-config.php';
 
 $page['dict']['title'] = 'Dictionary';
