@@ -16,6 +16,7 @@
 	update: add autocomplete to port link dialog object name, asset tag and port name fields
 	update: add 1000Base-BX40 and 1000Base-BX80 port types (#1645)
 	update: upgrade CodeMirror from 3.22 to 3.24
+	new feature: attribute value constraints (#1569)
 0.20.11 2016-02-07
 	bugfix: Tag Picker does not display the full tag list as a tree (#1403)
 	bugfix: race conditions in 802.Q deploy (switch remained synced after recalc)
